Change Log
==========


2019-08-23 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* bug fix in api.supplier_switch_v1() method (#389)
* more idurl fixes
* added helper devops script devops/dumpdhtdb (#388)



2019-08-22 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* added helper devops script devops/dumpdhtdb
* more bug fixes in family_member() automat  (#387)



2019-08-20 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* py3 fix in fastjsonrpc (#386)
* bug fix in family_member() state machine



2019-08-19 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* fixed missing DeleteBackup() packet handling in service_supplier()  (#384)
* bug fix in lib.fastjsonrpc
* bug fix in backup_matrix  (#382)



2019-08-18 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* for proxy router keep current routes only in RAM, do not store on disk as not required (#381)
* one more bug fix in transport/gateway.py  (#380)



2019-08-18 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* one more bug fix in  transport/gateway.py



2019-08-18 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* bug fix in transport.gateway
* bug fix in service_my_data()



2019-08-18 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* big rework in io_throttle
* added file_up() and file_down() state machines (#378)
* changes in service_my_data()
* bug fix in sorage.accounting



2019-08-15 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

*  added option services/identity-propagate/automatic-rotate-enabled (#377)



2019-08-13 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* extended development network with two more seed nodes (#376)



2019-08-12 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* py3 and idurl fixes