@@ -2,6 +2,13 @@ Change Log
 ==========
 
 
+2019-08-27 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)
+
+* process "identity-url-changed" event in service_private_messages() (#392)
+* process "identity-url-changed" event in service_supplier() (#391)
+
+
+
 2019-08-23 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)
 
 * bug fix in api.supplier_switch_v1() method (#389)
